--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -76,31 +76,34 @@
 
 
       {% if site.resume_section_education %}
-      <!-- begin Education -->
-      <section class="content-section">
-        <header class="section-header">
-          <h2>Education</h2>
-        </header>
+<!-- begin Education -->
+<section class="content-section">
+  <header class="section-header">
+    <h2>Education</h2>
+  </header>
 
-        {% for education in site.data.education %}
-        <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
-          <h3 class="resume-item-title" itemprop="name">{{ education.uni }}</h3>
-          <h4 class="resume-item-details group" itemprop="description">{{ education.degree }} &bull; {{ education.year }}</h4>
-          <h5 class="resume-item-details award-title" itemprop="description">{{ education.award }}</h5>
-          <p class="resume-item-copy" itemprop="description">
-            <ul class="resume-item-list">
-              {% for award in education.awards %}
-              <li>{{ award.award }}</li>
-              {% endfor %}
-            </ul>
-
-
-          <p class="resume-item-copy">{{ education.summary }}</p>
-        </div>
+  {% for education in site.data.education %}
+  <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
+    <h3 class="resume-item-title" itemprop="name">{{ education.uni }}</h3>
+    <h4 class="resume-item-details group" itemprop="description">{{ education.degree }} &bull; {{ education.year }}</h4>
+    <h5 class="resume-item-details award-title" itemprop="description">{{ education.award }}</h5>
+    <p class="resume-item-copy" itemprop="description">
+      <ul class="resume-item-list">
+        {% for award in education.awards %}
+        <li>{{ award.award }}</li>
         {% endfor %}
-      </section>
-      <!-- end Education -->
-      {% endif %}
+      </ul>
+    </p>
+    {% if education.result %}
+    <p class="resume-item-result">{{ education.result }}</p>
+    {% endif %}
+    <p class="resume-item-copy">{{ education.summary }}</p>
+  </div>
+  {% endfor %}
+</section>
+<!-- end Education -->
+{% endif %}
+
 
 
       {% if site.resume_section_projects %}
@@ -208,9 +211,9 @@
       <!-- begin Links -->
       <section class="content-section">
 
-        <header class="section-header">
+        <!-- <header class="section-header">
           <h2>Additional Links</h2>
-        </header>
+        </header> -->
 
         <div class="resume-item">
           <ul class="resume-item-list">
@@ -240,10 +243,10 @@
       <!-- end Print Social Links -->
       {% endif %}
 
-      <footer class="page-footer">
+      <!-- <footer class="page-footer">
         <p class="footer-line">Made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
         <p class="footer-line">If this is your live resume, you can modify or remove this part. ;-)</p>
-      </footer>
+      </footer> -->
 
     </div>
 
