--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -29,15 +29,19 @@
         <div class="title-bar no-print">
 
           <!-- Your title is also defined in the _config.yml file -->
-          <h2 class="header-title" itemprop="jobTitle">{{ site.resume_title }}</h2>
+          <h2 class="header-title" itemprop="jobTitle">
+            <span style="font-weight: bold;">{{ site.resume_title }}</span>
+          </h2>
+          
 
           <!-- This is the markup for the icon links; moved out to an include because it's very verbose, and you shouldn't ever need to edit the markup (unless you want to re-order the icons); if you want to customize which links appear, define them in the _config.yml file -->
           {% include icon-links.html %}
         </div>
 
-        <div class="executive-summary" itemprop="description">
+        <div class="executive-summary" itemprop="description" style="text-align: justify;">
           {{ site.resume_header_intro }}
         </div>
+        
 
         {% if site.resume_looking_for_work == 'yes' %}
         <a href="mailto:{{ site.resume_contact_email }}" class="contact-button no-print" itemprop="email">Contact me</a>
@@ -106,25 +110,33 @@
 
 
 
-      {% if site.resume_section_projects %}
-      <!-- begin Projects -->
-      <section class="content-section">
-        <header class="section-header">
-          <h2>Projects</h2>
-        </header>
+{% if site.resume_section_projects %}
+<!-- begin Projects -->
+<section class="content-section">
+  <header class="section-header">
+    <h2>Projects</h2>
+  </header>
 
-        {% for project in site.data.projects %}
-        <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
-          <meta itemprop="creator" content="{{ site.resume_name }}" itemtype="http://schema.org/Person" />
-          <h3 class="resume-item-title" itemprop="name">{% if project.url %}<a href="{{ project.url }}" itemprop="url">{{ project.project }}</a>{% else %}{{ project.project }}{% endif %}</h3>
-          <h4 class="resume-item-details" itemprop="description">{{ project.role }}  &bull; {{ project.duration }}</h4>
-          <p class="resume-item-copy">{{ project.description }}</p>
-        </div>
-        {% endfor %}
-
-      </section>
-      <!-- end Projects -->
+  {% for project in site.data.projects %}
+  <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
+    <meta itemprop="creator" content="{{ site.resume_name }}" itemtype="http://schema.org/Person" />
+    <h4 class="resume-item-title" itemprop="name">
+      {% if project.url %}
+      <a href="{{ project.url }}" itemprop="url">{{ project.project }}</a>
+      {% else %}
+      {{ project.project }}
       {% endif %}
+    </h4>
+    <p class="resume-item-details" itemprop="description">
+      {{ project.role }} &bull; {{ project.duration }}
+    </p>
+    <p class="resume-item-copy">{{ project.description }}</p>
+  </div>
+  {% endfor %}
+
+</section>
+<!-- end Projects -->
+{% endif %}
 
       {% if site.resume_section_skills %}
       <!-- begin Skills -->
@@ -150,23 +162,25 @@
       {% if site.resume_section_recognition %}
       <!-- begin Recognition -->
       <section class="content-section">
-
+      
         <header class="section-header">
           <h2>Recognition</h2>
         </header>
-
+      
         {% for recognition in site.data.recognitions %}
         <div class="resume-item">
-          <h3 class="resume-item-title" itemprop="award">{{ recognition.award }}</h3>
-          <h4 class="resume-item-details">{{ recognition.organization }} &bull; {{ recognition.year }}</h4>
+          <h4 class="resume-item-title" itemprop="award">{{ recognition.award }}</h4>
+          <p class="resume-item-details">
+            {{ recognition.organization }} &bull; {{ recognition.year }}
+          </p>
           <p class="resume-item-copy">{{ recognition.summary }}</p>
         </div>
         {% endfor %}
-
+      
       </section>
       <!-- end Recognition -->
       {% endif %}
-
+      
       {% if site.resume_section_associations %}
       <!-- begin Associations -->
       <section class="content-section">
